[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/ui/MainMenuScript.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/buttonfont.tres" type="DynamicFont" id=4]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
rect_min_size = Vector2( 7, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 750.0
margin_bottom = 750.0
color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 750.0
margin_bottom = 750.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 133.0
margin_top = 265.0
margin_right = 617.0
margin_bottom = 485.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
hint_tooltip = "Reonixe Dungeons"
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 484.0
margin_bottom = 44.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 60.0
margin_right = 424.0
margin_bottom = 40.0

[node name="StartContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 364.0
margin_bottom = 40.0
size_flags_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/StartContainer"]
margin_right = 364.0
margin_bottom = 40.0

[node name="Arrow_Picker" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/StartContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.972549, 0.819608, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 5
text = ">"
uppercase = true

[node name="Start" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/StartContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 364.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
text = "New Game"

[node name="CenterContainer6" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 484.0
margin_bottom = 88.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer6"]
margin_left = 40.0
margin_right = 444.0
margin_bottom = 40.0

[node name="LoadContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer6/VBoxContainer"]
margin_right = 404.0
margin_bottom = 40.0
size_flags_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer6/VBoxContainer/LoadContainer"]
margin_right = 404.0
margin_bottom = 40.0

[node name="Arrow_Picker" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer6/VBoxContainer/LoadContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.972549, 0.819608, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 5
text = ">"
uppercase = true

[node name="Start" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer6/VBoxContainer/LoadContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 404.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
text = "Load Game"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 484.0
margin_bottom = 132.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3"]
margin_right = 484.0
margin_bottom = 40.0

[node name="Howtoplaycontainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_right = 484.0
margin_bottom = 40.0
size_flags_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/Howtoplaycontainer"]
margin_right = 484.0
margin_bottom = 40.0

[node name="Arrow_Picker" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/Howtoplaycontainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.972549, 0.819608, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 5
text = ">"
uppercase = true

[node name="Howtoplay" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/Howtoplaycontainer/HBoxContainer"]
margin_left = 44.0
margin_right = 484.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
text = "How to play"

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 484.0
margin_bottom = 176.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer4"]
margin_left = 80.0
margin_right = 404.0
margin_bottom = 40.0

[node name="Optionscontainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer"]
margin_right = 324.0
margin_bottom = 40.0
size_flags_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/Optionscontainer"]
margin_right = 324.0
margin_bottom = 40.0

[node name="Arrow_Picker" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/Optionscontainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.972549, 0.819608, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 5
text = ">"
uppercase = true

[node name="options" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/Optionscontainer/HBoxContainer"]
margin_left = 44.0
margin_right = 324.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
text = "Options"

[node name="CenterContainer5" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 484.0
margin_bottom = 220.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer5"]
margin_left = 140.0
margin_right = 344.0
margin_bottom = 40.0

[node name="Exitcontainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer5/VBoxContainer"]
margin_right = 204.0
margin_bottom = 40.0
size_flags_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer5/VBoxContainer/Exitcontainer"]
margin_right = 204.0
margin_bottom = 40.0

[node name="Arrow_Picker" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer5/VBoxContainer/Exitcontainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.972549, 0.819608, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 5
text = ">"
uppercase = true

[node name="exit" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer5/VBoxContainer/Exitcontainer/HBoxContainer"]
margin_left = 44.0
margin_right = 204.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
text = "Exit"
